fix navlink textcolor on mobile sidebar

--- a/packages/@vuepress/theme-default/styles/index.styl
+++ b/packages/@vuepress/theme-default/styles/index.styl
@@ -27,9 +27,9 @@ body
   left 0
   right 0
   height $navbarHeight
-  background-color #fff
+  background-color $navbarBgColor
+  color $navbartextColor
   box-sizing border-box
-  border-bottom 1px solid $borderColor
 
 .sidebar-mask
   position fixed
